// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar avatar displays correct image when their is an image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: #f3f3f3;
  padding: 1rem;
  width: 192rem;
  height: 192rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem;
  color: #51575D;
  font-size: 64rem;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="64"
  >
    <span
      class=" c1"
      size="64"
    />
  </div>
</div>
`;

exports[`Avatar avatar displays correct initials when their is no image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: #f3f3f3;
  padding: 1rem;
  width: 192rem;
  height: 192rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem;
  color: #51575D;
  font-size: 64rem;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="64"
  >
    <span
      class=" c1"
      size="64"
    >
      MI
    </span>
  </div>
</div>
`;

exports[`Avatar avatar shape is correct 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 30%;
  background-color: #f3f3f3;
  padding: 1rem;
  width: 9rem;
  height: 9rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem;
  color: #51575D;
  font-size: 3rem;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    shape="30"
    size="3"
  >
    <span
      class=" c1"
      size="3"
    />
  </div>
</div>
`;

exports[`Avatar avatar size is correct 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: #f3f3f3;
  padding: 1rem;
  width: 63rem;
  height: 63rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem;
  color: #51575D;
  font-size: 21rem;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="21"
  >
    <span
      class=" c1"
      size="21"
    />
  </div>
</div>
`;

exports[`Avatar matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: #f3f3f3;
  padding: 1rem;
  width: 9rem;
  height: 9rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem;
  color: #51575D;
  font-size: 3rem;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="3"
  >
    <span
      class=" c1"
      size="3"
    />
  </div>
</div>
`;

exports[`Avatar matches snapshot Error State 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: undefined%;
  background-color: #f3f3f3;
  padding: 1rem;
  width: 192rem;
  height: 192rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 2rem;
  color: #c94545d9;
  font-size: 128rem;
  font-weight: 600;
}

<div>
  <div
    class=" c0"
    size="64"
  >
    <span
      class=" c1"
      size="128"
    >
      !
    </span>
  </div>
</div>
`;

exports[`Avatar matches snapshot Loading State 1`] = `
.c2 {
  opacity: 1;
  background: linear-gradient( 90deg, rgba(81,87,93,0.75), rgba(81,87,93,0.25), rgba(81,87,93,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  display: block;
  position: relative;
  color: transparent !important;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 > *:not(.c1) {
  opacity: 0 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

<div>
  <div
    style="border-radius: undefined%; overflow: hidden;"
  >
    <div
      class=" c0"
    >
      <div
        style="width: 192rem; height: 192rem;"
      />
      <div
        class=" c1 c2"
        color="#51575D"
      />
    </div>
  </div>
</div>
`;
